--- a/service-chart-store-line/package.json
+++ b/service-chart-store-line/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
     "mime-types": "^2.1.35",
     "mongoose": "^7.2.3",
     "multer": "^1.4.5-lts.1"
