--- a/service-frontend-adapter-users/package.json
+++ b/service-frontend-adapter-users/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "publisher",
+  "name": "service-frontend-adapter-users",
   "version": "1.0.0",
   "description": "(description)",
   "main": "index.js",
