--- a/service-chart-create-line/package.json
+++ b/service-chart-create-line/package.json
@@ -12,11 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "chartjs-node-canvas": "^4.1.6",
-    "csv": "^6.3.0",
-    "express": "^4.18.2",
-    "kafkajs": "^2.2.4",
-    "multer": "^1.4.5-lts.1",
-    "parcel": "^2.8.3"
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
