--- a/service-chart-store-bubble/package.json
+++ b/service-chart-store-bubble/package.json
@@ -10,12 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
     "kafkajs": "^2.2.4",
-    "mime-types": "^2.1.35",
-    "mongoose": "^7.2.4",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^7.2.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
