--- a/service-frontend-adapter-download/package.json
+++ b/service-frontend-adapter-download/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "kafkajs": "^2.2.4",
-    "multer": "^1.4.5-lts.1"
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
